small gug fixes
